# arabic_text_to_sql

./: Dockerfile  docker-compose.yml  final_orcale_back_up.py  front.py  main.ipynb  main.py  pyproject.toml  test.txt
src/: chat_bot_ui.py  clients.py  database.py  sidebar.py  utils.py
